--- a/ToDoManager/ToDoManager.csproj
+++ b/ToDoManager/ToDoManager.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoManager.API\ToDoManager.API.csproj" />
     <ProjectReference Include="..\ToDoManager.BLL\ToDoManager.BLL.csproj" />
   </ItemGroup>
 
